# vdr-core-py

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pylint.yml  python-app.yml  python-package.yml
tests/: known_hashes.py  test_anchor.py  test_client.py  test_hash.py  test_hash_streaming.py  test_hash_utils.py  test_schema.py  test_verify.py
vdr_core/: __init__.py
vdr_core/anchor/: __init__.py  batch.py  direct.py  idl.json  solana.py
vdr_core/certificate/: generate.py
vdr_core/client/: client.py
vdr_core/errors/: errors.py
vdr_core/hash/: __init__.py  index.py  utils.py
vdr_core/pipeline/: __init__.py  index.py  pii.py
vdr_core/report/: pdf.py
vdr_core/schema/: index.py
vdr_core/types/: index.py
vdr_core/verify/: __init__.py  cache.py  onchain.py  verify.py
vdr_core/webhook/: verify.py
